force-app/main/default/objects/StudentA__c/StudentA__c.object-meta.xml
<CustomObject>
    <label>StudentA</label>
    <nameField>
        <label>StudentA Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>StudentAs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>