force-app/main/default/objects/StudentA__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <formula>IF( NOT( ISBLANK( DOB__c ) ) ,
IF( DATE( 2000 , MONTH( DOB__c ) , DAY( DOB__c ) ) &lt;= DATE( 2000 , MONTH( TODAY() ) , DAY( TODAY() ) ),
YEAR (Today()) - YEAR ( DOB__c ),
YEAR (Today()) - YEAR ( DOB__c ) -1 ),
null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>