force-app/main/default/objects/StudentA__c/fields/isMarried__c.field-meta.xml
<CustomField>
    <fullName>isMarried__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isMarried</label>
    <type>Checkbox</type>
</CustomField>