force-app/main/default/objects/StudentA__c/validationRules/email_name_comb.validationRule-meta.xml
<ValidationRule>
    <fullName>email_name_comb</fullName>
    <active>true</active>
    <errorConditionFormula>if(NOT(ISBLANK(Email__c)),NOT(CONTAINS(LOWER(Email__c),LOWER(Name))),false)</errorConditionFormula>
    <errorDisplayField>Email__c</errorDisplayField>
    <errorMessage>Email cannot be without contains Email Name</errorMessage>
</ValidationRule>