force-app/main/default/objects/StudentA__c/validationRules/partner_name_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>partner_name_blank</fullName>
    <active>true</active>
    <errorConditionFormula>AND(isMarried__c = True, ISBLANK(Partner_Name__c))</errorConditionFormula>
    <errorDisplayField>Partner_Name__c</errorDisplayField>
    <errorMessage>Partner Name can not be blank in case of isMarried</errorMessage>
</ValidationRule>